update: device-service remove `-` from `games-search` service
